@@ -1,2 +1,4 @@
 import pkg1.p1a, pkg1.p1b
 import pkg2.p2a, pkg2.p2b
+import othermods.othera, othermods.otherb
+import othermods.sub.osa, othermods.sub.osb
