@@ -11,6 +11,11 @@ Version 3.5
   On a file page, ``r``, ``m``, ``x``, and ``p`` toggle the run, missing,
   excluded, and partial line markings.
 
+- The ``--omit`` and ``--include`` switches now interpret their values more
+  usefully.  If the value starts with a wildcard character, it is used as-is.
+  If it does not, it is interpreted relative to the current directory.
+  Closes `issue 121`.
+
 - Modules can now be run directly using ``coverage run -m modulename``, to
   mirror Python's ``-m`` flag.  Closes `issue 95_`, thanks, Brandon Rhodes.
 
@@ -37,6 +42,7 @@ Version 3.5
 .. _issue 95: https://bitbucket.org/ned/coveragepy/issue/95/run-subcommand-should-take-a-module-name
 .. _issue 104: https://bitbucket.org/ned/coveragepy/issue/104/explicitly-close-files
 .. _issue 107: https://bitbucket.org/ned/coveragepy/issue/107/codeparser-not-opening-source-files-with
+.. _issue 121: https://bitbucket.org/ned/coveragepy/issue/121/filename-patterns-are-applied-stupidly
 
 
 Version 3.4 --- 19 September 2010
